Breiten verändert und Marker in InfoBox angelegt

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                      </div>
 
                      <div class="row">
-                        <div class="brick full lead info-block">
+                        <div class="brick full lead info-block" data-arrow-position="1">
                            <iframe src="http://cadus.org/blog" frameborder="0"></iframe>
                         </div>
                      </div>
