Texte und Bilder eingebaut

--- a/index.html
+++ b/index.html
@@ -114,15 +114,89 @@
                         </form>
 
                         <div class="row info-buttons">
-                           <div class="brick"><a class="large bold" href="http://www.cadus.org/en/blog">warum</a></div>
-                           <div class="brick"><a class="large bold" href="http://www.cadus.org/en/blog">was</a></div>
-                           <div class="brick"><a class="large bold" href="http://www.cadus.org/en/blog">wie</a></div>
+                           <div class="brick"><a class="large bold" data-view="0" href="#warum">warum</a></div>
+                           <div class="brick"><a class="large bold" data-view="1" href="#was">was</a></div>
+                           <div class="brick"><a class="large bold" data-view="2" href="#wie">wie</a></div>
                         </div>
                      </div>
 
                      <div class="row">
-                        <div class="brick full lead info-block" data-arrow-position="1">
-                           <iframe src="http://cadus.org/blog" frameborder="0"></iframe>
+                        <div class="brick full lead info-block" data-view="0">
+                           <span class="arrow"></span>
+                           <div class="view">
+                              <h3>WARUM</h3>
+
+                              <p>Zerstörte medizinische Infrastruktur durch fünf Jahre Bürgerkrieg, ein humanitäres Embargo und eine steigende Anzahl von intern vertriebenen Menschen: so stellt sich in vielen Teilen Syriens die gegenwärtige humanitäre Lage dar. Die kurdisch kontrollierten Kantone Rojavas bilden dort leider keine Ausnahme, es mangelt vor allem an medizinischer Ausrüstung, Fachpersonal und einer konsequenten ärztlichen Versorgung außerhalb der großen Städte. Gleiches gilt für die Region Sinjar im Nordirak, die schwer zugängliche Peripherie an der Frontlinie zum so genannten Islamischen Staat.</p>
+
+                              <img src="assets/img/foto-1.jpg">
+
+                              <p>Medizinische Soforthilfe müsste dringend geleistet werden, der internationalen Staatengemeinschaft scheinen bisher jedoch Willen und Konzepte für die Region zu fehlen. Seit Beginn unseres Einsatzes im Norden Syriens und des Irak 2014 stand allerdings für uns fest, dass eine nachhaltige medizinische Grundversorgung im ersten Schritt nur über ein mobiles Konzept umzusetzen ist. Zu dynamisch waren 2014/15 noch die Frontverläufe, zu unklar ist bis heute, ob sämtliche Konfliktparteien medizinische Einrichtungen als Schutzbereiche respektieren. Gezielter Beschuss von Krankenhäusern hat sich in den letzten zwei Jahren als Taktik vor allem der syrischen und russischen Luftwaffe, aber auch türkischer Artillerieverbände etabliert. Der Zivilbevölkerung soll, so scheint es, jede Überlebensmöglichkeit genommen werden. Weitgehend verschont von Luftangriffen blieben bisher die kurdischen Kantone, dafür fanden hier die erbitterten Kämpfe gegen den „IS“ und andere jihadistische Milizen statt, welche auf ihrem Rückzug sämtliche Krankenhäuser sorgsam entkernten, um das Material in ihre syrische Hauptstadt Raqqa zu verbringen. Das de facto Embargo der türkischen Regierung gegenüber den kurdischen Gebieten in Syrien verhindert einen Wiederaufbau der vorhandenen medizinischen Einrichtungen konsequent. Ein Röntgengerät oder eine OP-Lampe bekommt man eben nicht so leicht über die Grenze geschmuggelt. Solange bestehende Krankenhäuser entweder gezielt beschossen werden oder ihr Wiederaufbau unmöglich gemacht wird, werden Menschen unnötigerweise weiter sterben und leiden müssen. Dem wollen wir zumindest im ersten Schritt für die kurdisch verwalteteten Gebiete Nordsyriens und des Iraks versuchen entgegenzuwirken.</p>
+
+                              <p>Dahersoll mit eurer Hilfe noch dieses Jahr ein mobiles Krankenhaus in den Nordirak beziehungsweise nach Nordsyrien entsandt werden. Mobil deswegen, um auch außerhalb der Städte die Bevölkerung versorgen zu können. Sei es in den vielen Camps der Geflüchteten oder die oft vernachlässigte ländliche Bevölkerung in eher unzugänglichen Gegenden. Mobil soll das Krankenhaus auch deswegen sein, um schnellstmöglich auf sich ändernde Bedingungen reagieren zu können, seien es Naturkatastrophen oder schlicht die Notwendigkeit auf die Schnelle eine Impfkampagne in bestimmten Arealen durchführen zu wollen. Wir versprechen uns außerdem von der Mobilität des Krankenhauses eine Risikominimierung. Anders als feste Gebäude, deren Koordinaten bekannt sind, können wir unseren Standort innerhalb eines Tages ändern und hoffen so, gezieltem Beschuss entgehen zu können.</p>
+                           </div>
+                           <div class="view">
+                              <h3>WAS</h3>
+
+                              <img src="assets/img/foto-2.jpg">
+
+                              Unser Mobiles Krankenhaus ist ein Konzept mit drei Besonderheiten:
+
+                              <ul>
+                                 <li>
+                                    <h4>Konzeptionalisiert nach Geländegängigkeit und Autarkie</h4>
+
+                                    <p>Das Krankenhaus ist darauf ausgelegt, mit einem Minimum an Transportvolumen ein Maximum an Effektivität zu gewährleisten. Wir können so Gegenden erreichen, wo sonst niemand (mehr) arbeitet. Außerdem können wir bei Veränderung der Bedürfnislage (zum Beispiel durch neu aufflammende Kampfhandlungen, Binnenmigration, etc.) die Lage des Krankenhauses so kurzfristig wie möglich verändern.</p>
+
+                                    <p>Durch unterstützende Einbindung regenerativer Energieversorgung und eigener Grauwasseraufbereitung kann das Krankenhaus bis zu einen Monat vollkommen autark arbeiten, was grade in Syrien auf Grund der unklaren Nachschublage wichtig ist.</p>
+                                 </li>
+                                 <li>
+                                    <h4>Unterstützt durch e-learning und Telemedizin</h4>
+
+                                    <p>Das Krankenhaus wird der zukünftige Mittelpunkt unseres bereits bestehenden Ausbildungsprogramms für medizinisches Assistenzpersonal in Syrien. Aber wir machen nicht nur mit dem bisherigen Konzept, Pflegekräfte und Sanitäter*innen auszubilden, weiter, sondern haben das Konzept noch weiterentwickelt.</p>
+
+                                    <p>Die Ausbildung wird zukünftig durch e-learning für alle Theorieaspekte unterstützt. So können die zukünftigen Mitarbeiter*innen im Gesundheitssystem zwischen ihren Praxiseinheiten ihr Wissen um den theoretischen Hintergrund selbst steuern und ständig wiederholen. Dem Problem mit mangelndem Internet vor Ort begegnen wir mit einem cloudbasierten Konzept, so dass trotz schlechter Netzqualität große Datenmengen an Lehrmaterial zur Verfügung gestellt werden kann. CADUS wird damit auch der erste Provider für kurdisch-sprachige Lehrmaterialen für medizinische Assistenzberufe. Selbstverständlich werden die Lehrmaterialen aber auch auf arabisch zur Verfügung gestellt.</p>
+
+                                    <p>Begleitend startet das erste Telemedizinprojekt für zivile Helfer in Kriegsgebieten. Unser Ziel ist es, dem Ärztemangel vor Ort soviel entgegen zu setzen, wie möglich. Es finden sich vielleicht momentan nicht viele Menschen, die bereit sind, in Syrien vor Ort zu helfen. Aber durch Einbindung moderner Technik können wir zumindest den verbliebenen Helfer*innen vor Ort weltweite Unterstützung durch fachlichen Rat geben. Fachärzt*innen verschiedenster Disziplinen arbeiten in einem Pool zusammen, um bei Fragen zu Notfällen und ernsthaften Erkrankungen die Helfer*innen in Syrien durch die Situation zu führen. Das Besondere daran: unser Telemedizin-Projekt erlaubt eine immediate response: Sobald ein Fall vor Ort durch eine*n Helfer*in eröffnet wird, wird fachliche Begleitung in Echtzeit zur Verfügung gestellt.</p>
+                                 </li>
+
+                                 <li>
+                                    <h4>Hospital in a box: Neukonzeptionalisierung von „mobile hospital“.</h4>
+
+                                    <p>Auf Grundlage von 20``-Seecontainern entsteht unser „Origami-Krankenhaus“. Raumerweiterungskonzepte und innovative logistische Lösungen zusammen mit günstigen Ausgangsmaterialien schaffen ein neues Konzept von „mobil“ in Bezug auf Krankenhaus. Generell ist zu mobilen Krankenhäusern zu sagen:</p>
+
+                                    <p>
+                                       <ol>
+                                          <li>Sie sind schneller einsetzbar als stationäre Bauvorhaben.</li>
+                                          <li>Es muss nicht zwangsläufig ein endgültiger Standort gefunden werden, und auf Migrationsbewegungen unterschiedlichsten Hintergrunds kann schnell und effektiv reagiert werden.</li>
+                                          <li>Es ist möglich, mit weniger finanziellem Aufwand eine größere Region zu versorgen.</li>
+                                       </ol>
+                                    </p>
+
+                                    <p>Momentan ist es so, dass mobile Krankenhäuser zum einen von Großorganisationen gestellt werden (IKRK, nationale Rotkreuzgesellschaften, MSF, Militär). Diese Großorganisationen müssen nicht besonders ressourcenorientiert planen, Logistik und Kosten spielen hier meist eine nachgeordnete Rolle.</p>
+
+                                    <p>Desweiteren gibt es mobile Krankenhauskonzepte von Firmen für staatliche Institutionen und Organisationen. Dies sind fertige Modulkonzepte, wie zum Beispiel ein fertiger OP in einem LKW. Diese Konzepte sind nicht dafür ausgelegt, größere Menschengruppen erstzuversorgen, außerdem sind sie extrem kostenintensiv, somit für kleinere NGOs und ärmere Regionen/Staaten unerschwinglich.</p>
+
+                                    <p>Genau in diese Lücke soll das CADUS-Konzept stoßen. Wir wollen ein finanzierbares Krankenhauskonzept erstellen, welches einen OP, ein Labor, bildgebende Diagnostik und 10 stationäre Behandlungsplätze vorhält.</p>
+
+                                    <p>Durch das Baukonzept mit 20"-Containern und dem modularen Aufbau der Autarkie- und Medizin-Module kann für jede Region der Welt ein kostengünstiges und nachhaltiges Krankenhauskonzept erstellt werden.</p>
+
+                                    <p>Durch den günstigen Aufbau und die Wechselbrückenkonstruktion kann das mobile Krankenhaus auch Herzstück eines Neubaus werden, in dem es Stück für Stück mit An- und Umbauten versehen wird.</p>
+                                 </li>
+                              </ul>
+                           </div>
+                           <div class="view">
+                              <h3>WIE</h3>
+
+                              <p>Die Idee zu dem mobilen Krankenhaus kam dem Team von CADUS während der Aufenthalte in Syrien 2014 und 2015. Nachdem die ersten Spenden gesammelt waren, wurde der erste LKW angeschafft. Ein ehemaliger Gerätewagen des THW, mit Allradantrieb und großer Doppelkabine für das medizinische Team. Von Freund*innen aus Berlin wurde dazu ein ehemaliger Bundeswehr-Medic-Shelter gestiftet. In Eigenarbeit haben wir dann zunächst begonnen, den alten Gerätekoffer vom LKW abzunehmen, um Platz für den Medic Shelter zu schaffen. Momentan sind wir dabei, Motor, Getriebe, Achsen, Bremsen etc. alle nochmals auf Stand zu bringen, um auf dem Weg ins Krisengebiet möglichst wenig unliebsame Überraschungen zu erleben.</p>
+
+                              <img src="assets/img/foto-2.jpg">
+
+                              <p>Der Vorteil des Iveco Magirus Deutz, nämlich trotz seines Alters eine behördentypische geringe Laufleistung zu haben und auf Grund der relativ einfachen Technik sowohl hier als auch unterwegs und im Einsatzgebiet soviel Reparaturen wie möglich selbst durchführen zu können, ist auch gleichzeitig einer der Nachteile bei der Umsetzung des Projektes. Ersatzteile sind zum großen Teil nicht mehr im Handel zu beziehen, sondern müssen auf dem Teilemarkt gesucht oder auch nachgebaut werden.</p>
+
+                              <p>Trotzdem, die Entscheidung für den Iveco Magirus Deutz halten wir für eine richtige. Einfache Technik ist dabei nur eines der Entscheidungskriterien. Viele Fans von Offroad-LKWs haben sich für dieses Grundmodell entschieden, um ihre Reisemobile auf der Basis aufzubauen, die Erfahrungen mit diesem Fahrzeugtyp sind gut. Außerdem ist der Iveco Magirus Deutz 130 bei sehr vielen Feuerwehren und anderen Behörden im Einsatz gewesen, so dass es eine Menge gebrauchter Teile zu finden gibt, wenn man sich denn die Mühe macht und im Internet recherchiert.</p>
+
+                              <p>In den nächsten zwei Wochen rechnen wir damit, dass der Wagen TÜV-fertig ist, dann geht es weiter damit, die Doppelkabine umzubauen und den Medic-Shelter unseren Bedürfnissen anzupassen. Auch dies geschieht zum großen Teil in Eigenarbeit bzw. mit Hilfe freiwilliger Unterstützung, damit mit den Spenden, die wir für dieses Projekt bekommen, so verantwortungsvoll wie möglich umgegangen wird.</p>
+                           </div>
                         </div>
                      </div>
 
