--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div id="container">
          <div id="main">
             <div class="inside">
-               <div class="mod_article first last block" id="spendenseite">
+               <div class="mod_article first last block">
                   <div class="ce_text block">
                      <h1>Operation : Mobile Hospital</h1>
                      <p class="lead">Pudio. Nequae aut eaquist od untis elendis trumque venecabor solupta porpore ratio. Pudae consectati ulparch illiqui te nos et et aut ipicipis erferi bea conseque qui non endae consequi blam incimus qui dolum facieni mporerchitae porrore hendebis utecerit.</p>
