--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                <div class="mod_article first last block">
                   <div class="ce_text block">
                      <h1>Spendenkampagne : Mobile Hospital</h1>
-                     <p class="lead">Du befindest dich auf unserer neuen Cadus Spendenseite für das mobile Krankenhaus.<br>
-                        Mit deiner Spende hilfst du es zu ermöglichen, dass das mobile Krankenhaus noch im Sommer ins Einsatzgebiet Nordsyrien und -irak fahren wird.<br>
-                        Im folgenden kannst du dir in der Grafik, interaktiv einen Überblick verschaffen, welche Bauteile der LKWs besitzt und die gewünschten Bauteile symbolisch in einem Spendenkorb zusammenfassen.<br>
-                        Für eine pragmatisch direkte Spende kannst du direkt einen Betrag in das Spendenfeld eintragen oder den Betrag des Spendenkorbes nach unten oder oben korrigieren.<br>
-                        <br>
-                        Für weitere Infos kannst du dich im unteren Teil in den Reitern WARUM, WAS und WIE über unsere Motivation, dias Einsatzkonzept und unser Vorankommen informieren.
+                     <p class="lead">
+                        Du befindest dich auf unserer neuen Cadus Spendenseite für das mobile Krankenhaus. Mit deiner Spende hilfst du, es zu ermöglichen, dass das mobile Krankenhaus noch im Sommer ins Einsatzgebiet Nordsyrien und -irak fahren wird. Im folgenden kannst du dir in der Grafik interaktiv einen Überblick verschaffen, welche Bauteile der LKW besitzt und die gewünschten Bauteile symbolisch in einem Spendenkorb zusammenfassen. Für eine pragmatisch direkte Spende kannst du direkt einen Betrag in das Spendenfeld eintragen oder den Betrag des Spendenkorbes nach unten oder oben korrigieren.
+                     </p>
+
+                     <p class="lead">
+                        Für weitere Infos kannst du dich im unteren Teil in den Reitern WARUM, WAS und WIE über unsere Motivation, das Einsatzkonzept und unser Vorankommen informieren.
                      </p>
 
                      <div class="lkw">
@@ -115,7 +115,7 @@
                               </div>
                            </div>
                         </div>
-                        <button class="invert highlight donation-button" disabled type="submit">Jetzt spenden</button>
+                        <button class="invert highlight donation-button" type="submit" disabled>Jetzt spenden</button>
                      </form>
 
                      <div class="infos">
