--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                         <i class="fa fa-bars"></i>
                      </button>
-                     <a class="navbar-brand page-scroll" href="http://www.cadus.org/cadus">
+                     <a class="navbar-brand page-scroll" href="http://www.cadus.org/">
                         <img class="logo" src="http://www.cadus.org/files/cadus_layout/cadus-logo_rgb.svg">
                      </a>
                   </div>
