Navigation gestutzt (für’s iPad)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                            <li class="sibling"><a href="http://www.cadus.org/de/blog" title="Blog" class="sibling">Blog</a></li>
                            <li class="sibling"><a href="http://www.cadus.org/de/mitmachen" title="Mitmachen" class="sibling">Mitmachen</a></li>
                            <li class="sibling"><a href="http://www.cadus.org/de/newsletter" title="Newsletter" class="sibling">Newsletter</a></li>
-                           <li class="sibling last"><a href="http://www.cadus.org/de/kontakt-spenden" title="Kontakt/Spenden" class="sibling last">Kontakt/Spenden</a></li>
+                           <li class="sibling last"><a href="http://www.cadus.org/de/kontakt-spenden" title="Kontakt/Spenden" class="sibling last">Kontakt</a></li>
                         </ul>
                         <!-- indexer::stop -->
                         <div class="mod_i18nl10nLanguageSelection i18nl10n_lang_style i18nl10n_lang_style_iso block">
