--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
    <meta name="description" content="Spendenkampagne : Mobile Hospital">
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-   <link rel="stylesheet" href="http://www.cadus.org/system/modules/i18nl10n/assets/css/i18nl10n_lang.css">
-   <link rel="stylesheet" href="http://www.cadus.org/system/modules/i18nl10n/assets/css/i18nl10n_lang_iso.css">
-   <link rel="stylesheet" href="http://www.cadus.org/assets/css/cadus-donation.css">
-
+   <link rel="stylesheet" href="http://www.cadus.org/assets/donation/cadus.org.css">
    <link rel="stylesheet" href="assets/css/style.css">
 
    <link rel="alternate" href="http://www.cadus.org/en/" hreflang="en" title="Mobile Hospital">
@@ -21,7 +18,6 @@
    <div id="wrapper">
       <header id="header">
          <div class="inside">
-            <!-- indexer::stop -->
             <nav class="mod_navigation block navbar navbar-custom navbar-fixed-top">
                <div class="container">
                   <div class="navbar-header">
@@ -42,28 +38,16 @@
                            <li class="sibling"><a href="http://www.cadus.org/de/newsletter" title="Newsletter" class="sibling">Newsletter</a></li>
                            <li class="sibling last"><a href="http://www.cadus.org/de/kontakt-spenden" title="Kontakt/Spenden" class="sibling last">Kontakt</a></li>
                         </ul>
-                        <!-- indexer::stop -->
-                        <div class="mod_i18nl10nLanguageSelection i18nl10n_lang_style i18nl10n_lang_style_iso block">
-                           <ul>
-                              <li class="first i18nl10n_lang i18nl10n_lang_de active">
-                                 <i class="i18nl10n_flag"> <img src="http://www.cadus.org/system/modules/i18nl10n/assets/img/flag_icons/de.png"> </i>
-                                 <span class="i18nl10n_label"> Deutsch </span>
-                                 <span class="i18nl10n_iso"> de </span>
-                              </li>
-                              <li class="last i18nl10n_lang i18nl10n_lang_en">
-                                 <a href="english.html" title="Mobile Hospital"> <i class="i18nl10n_flag"> <img src="http://www.cadus.org/system/modules/i18nl10n/assets/img/flag_icons/en.png"> </i>
-                                    <span class="i18nl10n_label"> English </span>
-                                    <span class="i18nl10n_iso"> en </span>
-                                 </a>
-                              </li>
+                        <nav class="mod_changelanguage block">
+                           <ul class="level_1" role="menubar">
+                              <li class="lang-de active last"><span class="lang-de active last" role="menuitem">de</span></li>
+                              <li class="lang-en first"><a href="english.html" title="Blog" class="lang-en first" hreflang="en" lang="en" role="menuitem">en</a></li>
                            </ul>
-                        </div>
-                        <!-- indexer::continue -->
+                        </nav>
                      </div>
                   </div>
                </div>
             </nav>
-            <!-- indexer::continue -->
          </div>
       </header>
       <div id="container">
@@ -211,42 +195,12 @@
          </footer>
       </div>
 
-      <script src="http://www.cadus.org/assets/js/cadus-donation.js"></script>
-      <script src="http://www.cadus.org/assets/jquery/ui/1.11.4/jquery-ui.min.js"></script>
+      <script src="http://www.cadus.org/assets/jquery/core/1.11.3/jquery.min.js"></script>
 
       <script src="assets/js/vivus.min.js"></script>
       <script src="assets/js/config.js"></script>
       <script src="assets/js/script.js"></script>
 
-      <script>
-      (function($) {
-         $(document).ready(function() {
-            $(document).accordion({
-               active: !1,
-               heightStyle: 'content',
-               header: 'div.toggler',
-               collapsible: !0,
-               create: function(event, ui) {
-                  ui.header.addClass('active');
-                  $('div.toggler').attr('tabindex', 0)
-               },
-               activate: function(event, ui) {
-                  ui.newHeader.addClass('active');
-                  ui.oldHeader.removeClass('active');
-                  $('div.toggler').attr('tabindex', 0)
-               }
-            })
-         })
-      })(jQuery)
-      </script>
-      <script type="text/javascript">
-      $(document).ready(function() {
-         var defaults = {
-            text: '<span class="fa fa-arrow-up"></span>',
-         };
-         $().UItoTop(defaults)
-      })
-      </script>
       <script src="http://www.cadus.org/files/cadus_layout/js/main.js"></script>
 </body>
 
