Ident für Google Search Console hinzugefügt

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <title>Spendenkampagne : Mobile Hospital</title>
    <meta name="description" content="Spendenkampagne : Mobile Hospital">
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+   <meta name="google-site-verification" content="_2Um5OdPsZrvRKpYxPLkavBV6YilI49dOCRNzKEYoio" />
 
    <link rel="stylesheet" href="http://www.cadus.org/assets/donation/cadus.org.css">
    <link rel="stylesheet" href="assets/css/style.css">
