Social-Media-Meta-Tags 🌈

--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <meta name="google-site-verification" content="_2Um5OdPsZrvRKpYxPLkavBV6YilI49dOCRNzKEYoio" />
 
+   <link rel="alternate" href="http://www.cadus.org/en/" hreflang="en" title="Mobile Hospital">
+
    <link rel="stylesheet" href="http://www.cadus.org/assets/donation/cadus.org.css">
    <link rel="stylesheet" href="assets/css/style.css">
 
-   <link rel="alternate" href="http://www.cadus.org/en/" hreflang="en" title="Mobile Hospital">
+   <!-- Twitter Card data -->
+   <meta name="twitter:card" content="summary">
+   <meta name="twitter:title" content="Mobile Hospital for Syria">
+   <meta name="twitter:description" content="CADUS-Fundraising: mobile Hospital for Syria/Rojava and Iraq">
+   <meta name="twitter:image" content="http://mobile-hospital.org/assets/img/truck.jpg">
+
+   <!-- Open Graph data -->
+   <meta property="og:type" content="website">
+   <meta property="og:title" content="Mobile Hospital for Syria">
+   <meta property="og:description" content="CADUS-Fundraising: mobile Hospital for Syria/Rojava and Iraq">
+   <meta property="og:url" content="http://mobile-hospital.org/">
+   <meta property="og:image" content="http://mobile-hospital.org/assets/img/truck.jpg">
+
+   <!-- Schema.org markup for Google+ -->
+   <meta itemprop="name" content="Mobile Hospital for Syria">
+   <meta itemprop="description" content="CADUS-Fundraising: mobile Hospital for Syria/Rojava and Iraq">
+   <meta itemprop="image" content="http://mobile-hospital.org/assets/img/truck.jpg">
+
    <!--[if lt IE 9]><script src="http://www.cadus.org/assets/html5shiv/3.7.2/html5shiv-printshiv.min.js"></script><![endif]-->
 </head>
 
