Icons und theme-color hinzugefügt

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
    <link rel="stylesheet" href="http://www.cadus.org/assets/donation/cadus.org.css">
    <link rel="stylesheet" href="assets/css/style.css">
 
+   <link rel="shortcut icon" href="assets/img/icon.ico">
+   <link rel="apple-touch-icon" href="assets/img/icon.png">
+   <link rel="icon" type="image/png" href="assets/img/icon.png">
+   <meta name="theme-color" content="#ffffff">
+
    <!-- Twitter Card data -->
    <meta name="twitter:card" content="summary">
    <meta name="twitter:title" content="Mobile Hospital for Syria">
