Links an aktuellen Struktur von cadus.org angepasst

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                   <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                      <div class="menu-onepager-navigation-container">
                         <ul class="level_1 nav navbar-nav" role="menuitem">
-                           <li class="anker sibling first"><a href="http://www.cadus.org/de/start#wir" title="Über uns" class="anker sibling first">Über uns</a></li>
-                           <li class="anker sibling"><a href="http://www.cadus.org/de/start#themen" title="Projekte" class="anker sibling">Projekte</a></li>
+                           <li class="anker sibling first"><a href="http://www.cadus.org/de/#wir" title="Über uns" class="anker sibling first">Über uns</a></li>
+                           <li class="anker sibling"><a href="http://www.cadus.org/de/#themen" title="Projekte" class="anker sibling">Projekte</a></li>
                            <li class="sibling"><a href="http://www.cadus.org/de/blog" title="Blog" class="sibling">Blog</a></li>
                            <li class="sibling"><a href="http://www.cadus.org/de/mitmachen" title="Mitmachen" class="sibling">Mitmachen</a></li>
                            <li class="sibling"><a href="http://www.cadus.org/de/newsletter" title="Newsletter" class="sibling">Newsletter</a></li>
@@ -66,7 +66,7 @@
                         <nav class="mod_changelanguage block">
                            <ul class="level_1" role="menubar">
                               <li class="lang-de active last"><span class="lang-de active last" role="menuitem">de</span></li>
-                              <li class="lang-en first"><a href="english.html" title="Blog" class="lang-en first" hreflang="en" lang="en" role="menuitem">en</a></li>
+                              <li class="lang-en first"><a href="english.html" title="English Version" class="lang-en first" hreflang="en" lang="en" role="menuitem">en</a></li>
                            </ul>
                         </nav>
                      </div>
