Fixe Navbar hat zu viele Probleme bereitet, darum jetzt statisch

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <div id="wrapper">
       <header id="header">
          <div class="inside">
-            <nav class="mod_navigation block navbar navbar-custom navbar-fixed-top">
+            <nav class="mod_navigation block navbar navbar-custom top-nav-collapse">
                <div class="container">
                   <div class="navbar-header">
                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
