Englische Version hinzugefügt

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <title>Spendenkampagne : Mobile Hospital</title>
-   <meta name="description" content="Spendenkampagne : Mobile Hospital">
+   <meta name="description" content="CADUS-Fundraising: mobile Hospital for Syria/Rojava and Iraq">
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <meta name="google-site-verification" content="_2Um5OdPsZrvRKpYxPLkavBV6YilI49dOCRNzKEYoio" />
 
