Verweis auf de-Version in en-Version

--- a/english.html
+++ b/english.html
@@ -8,7 +8,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <meta name="google-site-verification" content="_2Um5OdPsZrvRKpYxPLkavBV6YilI49dOCRNzKEYoio" />
 
-   <link rel="alternate" href="http://www.cadus.org/en/" hreflang="en" title="Mobile Hospital">
+   <link rel="alternate" href="http://www.cadus.org/de/" hreflang="de" title="Mobile Hospital">
 
    <link rel="stylesheet" href="http://www.cadus.org/assets/donation/cadus.org.css">
    <link rel="stylesheet" href="assets/css/style.css">
