Links auf alternate content korrigiert

--- a/english.html
+++ b/english.html
@@ -8,7 +8,7 @@
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <meta name="google-site-verification" content="_2Um5OdPsZrvRKpYxPLkavBV6YilI49dOCRNzKEYoio" />
 
-   <link rel="alternate" href="http://www.cadus.org/de/" hreflang="de" title="Mobile Hospital">
+   <link rel="alternate" href="./" hreflang="de" title="Mobile Hospital">
 
    <link rel="stylesheet" href="http://www.cadus.org/assets/donation/cadus.org.css">
    <link rel="stylesheet" href="assets/css/style.css">
@@ -65,7 +65,7 @@
                         </ul>
                         <nav class="mod_changelanguage block">
                            <ul class="level_1" role="menubar">
-                              <li class="lang-de last"><a href="/" title="Deutsche Version" class="lang-de last" hreflang="de" lang="de" role="menuitem">de</a></li>
+                              <li class="lang-de last"><a href="./" title="Deutsche Version" class="lang-de last" hreflang="de" lang="de" role="menuitem">de</a></li>
                               <li class="lang-en active first"><span class="lang-en active first" role="menuitem">en</span></li>
                            </ul>
                         </nav>
