Added Google Analytics Tracking Code

--- a/english.html
+++ b/english.html
@@ -36,6 +36,15 @@
    <meta itemprop="description" content="CADUS-Fundraising: mobile Hospital for Syria/Rojava and Iraq">
    <meta itemprop="image" content="http://mobile-hospital.org/assets/img/truck.jpg">
 
+   <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-88770722-1', 'auto');
+      ga('send', 'pageview');
+   </script>
+
    <!--[if lt IE 9]><script src="http://www.cadus.org/assets/html5shiv/3.7.2/html5shiv-printshiv.min.js"></script><![endif]-->
 </head>
 
