--- a/index.html
+++ b/index.html
@@ -63,22 +63,30 @@
                      </a>
                   </div>
                   <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                     <div class="menu-onepager-navigation-container">
-                        <ul class="level_1 nav navbar-nav" role="menuitem">
-                           <li class="anker sibling first"><a href="http://www.cadus.org/de/#wir" title="Über uns" class="anker sibling first">Über uns</a></li>
-                           <li class="anker sibling"><a href="http://www.cadus.org/de/#themen" title="Projekte" class="anker sibling">Projekte</a></li>
-                           <li class="sibling"><a href="http://www.cadus.org/de/blog" title="Blog" class="sibling">Blog</a></li>
-                           <li class="sibling"><a href="http://www.cadus.org/de/mitmachen" title="Mitmachen" class="sibling">Mitmachen</a></li>
-                           <li class="sibling"><a href="http://www.cadus.org/de/newsletter" title="Newsletter" class="sibling">Newsletter</a></li>
-                           <li class="sibling last"><a href="http://www.cadus.org/de/kontakt-spenden" title="Kontakt/Spenden" class="sibling last">Kontakt</a></li>
-                        </ul>
-                        <nav class="mod_changelanguage block">
-                           <ul class="level_1" role="menubar">
-                              <li class="lang-de active last"><span class="lang-de active last" role="menuitem">de</span></li>
-                              <li class="lang-en first"><a href="english.html" title="English Version" class="lang-en first" hreflang="en" lang="en" role="menuitem">en</a></li>
-                           </ul>
-                        </nav>
-                     </div>
+                    <div class="menu-onepager-navigation-container">
+<ul class="level_1 nav navbar-nav" role="menubar">
+<li class="submenu anker sibling first"><a href="de/#wir" title="Über uns" class="submenu anker sibling first" role="menuitem" aria-haspopup="true">Über uns</a>
+<ul class="level_2 nav navbar-nav" role="menu">
+<li class="first last"><a href="de/ueber-uns/faq" title="FAQ" class="first last" role="menuitem">FAQ</a></li>
+</ul>
+</li>
+<li class="anker sibling"><a href="de/#themen" title="Projekte" class="anker sibling" role="menuitem">Projekte</a></li>
+<li class="sibling"><a href="de/blog" title="Blog" class="sibling" role="menuitem">Blog</a></li>
+<li class="support_us sibling"><a href="https://www.betterplace.org/de/projects/35982-seenotrettung-cadus-search-and-rescue-mind-n-rescue" title="Spenden" class="support_us sibling" target="_blank" role="menuitem">Spenden</a></li>
+<li class="sibling"><a href="de/mitmachen" title="Mitmachen" class="sibling" role="menuitem">Mitmachen</a></li>
+<li class="donation sibling"><a href="http://www.mobile-hospital.org" title="Mobile Hospital" class="donation sibling" target="_blank" role="menuitem">Mobile Hospital</a></li>
+<li class="sibling"><a href="de/newsletter" title="Newsletter" class="sibling" role="menuitem">Newsletter</a></li>
+<li class="sibling last"><a href="de/kontakt" title="Kontakt" class="sibling last" role="menuitem">Kontakt</a></li>
+</ul>
+<!-- indexer::stop -->
+<nav class="mod_changelanguage block">
+<ul class="level_1" role="menubar">
+<li class="lang-de active last"><span class="lang-de active last" role="menuitem">de</span></li>
+<li class="lang-en first"><a href="en/" title="home" class="lang-en first" hreflang="en" lang="en" role="menuitem">en</a></li>
+</ul>
+</nav>
+<!-- indexer::continue -->
+</div>
                   </div>
                </div>
             </nav>
